# mor_lms_vault

./: .gitignore  Cargo.toml  MOR_PLAN.md  install.sh
.stfolder/: syncthing-folder-7b150c.txt
adapters/auth/: Cargo.toml
adapters/auth/src/: lib.rs
adapters/crypto/: Cargo.toml
adapters/crypto/src/: lib.rs
bridge_linux_fs/: Cargo.toml  moribund.native.bridge.json  run_bridge.sh
bridge_linux_fs/src/: main.rs
bridge_wasm_idb/: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
ext_chrome_sensor/: Cargo.toml
ext_chrome_sensor/extension/: background.js  content.js  manifest.json
ext_chrome_sensor/src/: lib.rs
mor_lms_desktop/: Cargo.toml  MOR_PLAN.md
mor_lms_desktop/assets/: base.css
mor_lms_desktop/src/: main.rs
mor_native_bridge/: Cargo.toml  moribund.native.bridge.json
mor_native_bridge/src/: main.rs
mor_sensor_ext/: Cargo.toml
mor_sensor_ext/extension/: background.js  content.js  manifest.json
mor_sensor_ext/src/: lib.rs
vault_auth/: Cargo.toml
vault_auth/src/: lib.rs  oidc.rs  steam.rs  web3.rs
vault_cli/: Cargo.toml
vault_cli/src/: main.rs
vault_core/: Cargo.toml
vault_core/src/: auth.rs  lib.rs  progress.rs  schema.rs
vault_crypto/: Cargo.toml
vault_crypto/src/: lib.rs
