[package]
name = "mor_native_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
lms_core = { package = "vault_core", path = "../vault_core" }
lms_crypto = { package = "vault_crypto", path = "../vault_crypto" }
lms_auth = { package = "vault_auth", path = "../vault_auth" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
age = "0.11"