[package]
name = "mor_lms_desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5", features = ["desktop"] }
dioxus-logger = "0.5"
tokio = { version = "1", features = ["full"] }

# Link your internal Moribund crates
vault_core = { path = "../vault_core" }
# vault_crypto = { path = "../vault_crypto" } # Uncomment when ready to wire up