[package]
name = "vault_auth"
version = "0.1.0"
edition = "2021"
description = "OIDC Authentication provider for the Moribund LMS Vault via Rauthy."

[dependencies]
lms_core = { package = "vault_core", path = "../vault_core" }

# Switched to 'ureq' for blocking HTTP requests
openidconnect = { version = "3.4", features = ["ureq"] }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"