[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "Terminal interface for the Moribund LMS Vault."

[dependencies]
lms_core = { package = "vault_core", path = "../vault_core" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }